<?xml version="1.0"?>
<package format="3">
  <name>barracuda_ping_360</name>
  <version>2.0.0</version>
  <description>Barracuda AUV with Ping360 Sonar ROS2 Package</description>

  <maintainer email="jiangmy@todo.todo">jiangmy</maintainer>
  <license>MIT</license>

  <exec_depend>ros2launch</exec_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-numpy</depend>
  <depend>python3-bluerobotics-ping-pip</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>