<?xml version="1.0"?>
<package format="3">
  <name>barracuda_ping_360</name>
  <version>2.0.0</version>
  <description>Barracuda AUV with Ping360 Sonar ROS2 Package</description>

  <maintainer email="jiangmy@todo.todo">jiangmy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
</package>